@@ -1,0 +1,5 @@
+<p>single</p>
+
+{% for article in articles %}
+  <p>{{ article | link_to_article }}</p>
+{% endfor %}
