@@ -9,6 +9,6 @@ class AttachmentTest < Test::Unit::TestCase
 
   def test_should_count_correct_assets
     assert_equal 15, sites(:first).attachments.size
-    assert_equal 3, sites(:hostess).attachments.size
+    assert_equal 5,  sites(:hostess).attachments.size
   end
 end
